<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Introduction"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/ButtonSecondActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Intro"
        android:text="@string/ButtonSecondAct" />


    <ImageView
        android:id="@+id/Picture"
        android:layout_below="@+id/ButtonSecondActivity"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/question_mark" />
    <Button
        android:id="@+id/Quizz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Picture"
        android:text="quizz"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/BiersList"
        android:text="@string/ButtonBiersList"
        android:layout_below="@+id/Quizz"/>

    <android.support.v7.widget.Toolbar

        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


</RelativeLayout>

